--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Transforma</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="calculadora/css/home.css">
     <script src="https://kit.fontawesome.com/b97523014d.js" crossorigin="anonymous"></script>
 </head>
 
@@ -33,8 +33,8 @@
     <section class="main">
         <div class="sidebar">
             <h3>Home</h3>
-            <a href="../index.html"><i class="fa-solid fa-house"></i> Início</a>
-            <a class="sidebar-active" href="#"><i class="fa-solid fa-house"></i> Calculadora</a>
+            <a class="sidebar-active" href="#"><i class="fa-solid fa-house"></i> Início</a>
+            <a href="calculadora/calculadora.html"><i class="fa-solid fa-house"></i> Calculadora</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
@@ -51,9 +51,9 @@
         </div><!--sidebar-->
         <div class="content">
             <div class="titulo-secao">
-                <h2>Sua Calculadora de Precificação</h2>
+                <h2>Início</h2>
                 <div class="separator"></div>
-                <p><i class="fa-solid fa-house"></i> / Calculadora de Precificação</p>
+                <p><i class="fa-solid fa-house"></i> / Sua empresa será transformada com a nossa plataforma.</p>
             </div>
             <!--<div class="box-info">
                 <div style="background: linear-gradient(45deg, #FF5370, #fc8a9d);" class="box-info-single">
@@ -95,7 +95,7 @@
                     </div>
                     <i class="fa-solid fa-money-check-dollar"></i>
                 </div>
-            </div> -->
+            </div> 
             <div class="container-produtos">
                 <div class="grid-produtos">
                     <div class="section-title-produtos">Etapa 1 - Custos de Venda</div>
@@ -118,16 +118,16 @@
                     <div class="input-group-produtos">
                         <label for="valorFrete">Margem de lucro desejada:</label>
                         <input type="number" id="valorFrete" placeholder="R$0,00">
-                    </div>
+                    </div>-->
 
                     <!-- Repita a estrutura para os outros campos conforme necessário -->
 
-                    <div class="section-title-produtos">Etapa 2 - Custos de transação</div>
+                    <!--<div class="section-title-produtos">Etapa 2 - Custos de transação</div>-->
                     <!-- Campos para custos de transação -->
 
-                    <button class="btn-calcular-produtos" type="button">CALCULAR</button>
+                    <!--<button class="btn-calcular-produtos" type="button">CALCULAR</button>
                 </div>
-            </div>
+            </div>-->
 
         </div><!--content-->
     </section><!--main-->
