ajuste icone calculadora

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="sidebar">
             <h3>Home</h3>
             <a class="sidebar-active" href="#"><i class="fa-solid fa-house"></i> Início</a>
-            <a href="calculadora/calculadora.html"><i class="fa-solid fa-house"></i> Calculadora</a>
+            <a href="calculadora/calculadora.html"><i class="fa-solid fa-calculator"></i> Calculadora</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
