novo modelo responsivo

--- a/index.html
+++ b/index.html
@@ -18,29 +18,32 @@
                     alt="">
                 <h3>Transforma Empresas</h3>
             </div>
-            <div class="icons-header">
-                <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <nav>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
             </div>
-        </div>
-        <div class="info-header" style="align-items: center;">
-            <i class="fa-solid fa-envelope"></i>
-            <i class="fa-solid fa-bell"></i>
-            <img
-                src="https://cdn.discordapp.com/attachments/1002196091757920266/1205553729319862353/avatar-default.jpg?ex=65d8ca67&is=65c65567&hm=ab7fc03699b2f34b3a3204272c1559dad83310d489b9c52f0d2dc8bb033f6d03&" />
-        </div>
+            <ul class="nav-list">
+                <li><a href="index.html">Início</a></li>
+                <li><a href="calculadora/calculadora.html">Calculadora</a></li>
+                <!-- <li><a href="https://www.transformaempresas.com.br">Nossa página</a></li> -->
+            </ul>
+        </nav>
     </header>
 
     <section class="main">
-        <div class="sidebar">
+        <!--<div class="sidebar">
             <h3>Home</h3>
-            <a class="sidebar-active" href="#"><i class="fa-solid fa-house"></i> Início</a>
-            <a href="calculadora/calculadora.html"><i class="fa-solid fa-calculator"></i> Calculadora</a>
+            <a href="../index.html"><i class="fa-solid fa-house"></i> Início</a>
+            <a class="sidebar-active" href="#"><i class="fa-solid fa-calculator"></i> Calculadora</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <br>
             <div class="separator"></div>
-        </div><!--sidebar-->
+        </div>--><!--sidebar-->
         <div class="content">
             <div class="titulo-secao">
                 <h2>Início</h2>
@@ -123,6 +126,8 @@
 
         </div><!--content-->
     </section><!--main-->
+
+    <script src="mobile-navbar.js"></script>
 </body>
 
 </html>
