--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -19,20 +19,23 @@
                     alt="">
                 <h3>Transforma Empresas</h3>
             </div>
-            <div class="icons-header">
-                <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+        <nav>
+            <div class="mobile-menu">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
             </div>
-        </div>
-        <div class="info-header" style="align-items: center;">
-            <i class="fa-solid fa-envelope"></i>
-            <i class="fa-solid fa-bell"></i>
-            <img
-                src="https://cdn.discordapp.com/attachments/1002196091757920266/1205553729319862353/avatar-default.jpg?ex=65d8ca67&is=65c65567&hm=ab7fc03699b2f34b3a3204272c1559dad83310d489b9c52f0d2dc8bb033f6d03&" />
-        </div>
+            <ul class="nav-list">
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="../calculadora/calculadora.html">Calculadora</a></li>
+                <!-- <li><a href="https://www.transformaempresas.com.br">Nossa página</a></li> -->
+            </ul>
+        </nav>
     </header>
 
     <section class="main">
-        <div class="sidebar">
+        <!--<div class="sidebar">
             <h3>Home</h3>
             <a href="../index.html"><i class="fa-solid fa-house"></i> Início</a>
             <a class="sidebar-active" href="#"><i class="fa-solid fa-calculator"></i> Calculadora</a>
@@ -41,7 +44,7 @@
             <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <br>
             <div class="separator"></div>
-        </div><!--sidebar-->
+        </div>--><!--sidebar-->
         <div class="content">
             <div class="titulo-secao">
                 <h2>Sua Calculadora de Precificação</h2>
@@ -168,8 +171,8 @@
                     <div class="section-title-produtos">Tabela/Gráfico Fixa</div>
                     <div>
                         <canvas id="chartsFixo"></canvas>
-                      </div>
-                    <div class="section-title-produtos"></div>                    
+                    </div>
+                    <div class="section-title-produtos"></div>
                     <div class="input-group-produtos">
                         <label class="outrovalor" id="unidadeVendidaFixo">Preço por unidade: </label>
                         <input type="number" id="unidadeFixa" value="1" readonly />
@@ -263,12 +266,13 @@
                     <div class="section-title-produtos">Tabela/Gráfico Variável</div>
                     <div>
                         <canvas id="chartsVariavel"></canvas>
-                      </div>
+                    </div>
                     <div class="section-title-produtos"></div>
                     <div class="input-group-produtos">
                         <label class="outrovalor" id="unidadeVendidaVariavel">Unidades Vendidas: </label>
                         <input type="number" id="unidadeVariavel" placeholder="Unidades" />
-                        <button id="btn-calcular-variavel" class="btn-calcular-produtos2" type="button">Calcular</button>
+                        <button id="btn-calcular-variavel" class="btn-calcular-produtos2"
+                            type="button">Calcular</button>
                     </div>
                     <div class="section-title-produtos"></div>
                     <table>
@@ -358,6 +362,7 @@
         </div><!--content-->
     </section><!--main-->
     <script src="formulas.js"></script>
+    <script src="../mobile-navbar.js"></script>
 </body>
 
 </html>
