ajustes de cores

--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -158,7 +158,8 @@
                             <span id="pontoEquilibrioUnidade" class="campo-estilizado"></span>
                         </div>
                         <!-- Repita a estrutura para os outros campos conforme necessário -->
-
+                        <br>
+                        <br>
                         <div class="section-title-produtos"></div>
                         <!-- div caso necessite adicionar mais alguma informação -->
                         <!-- Campos para custos de transação -->
@@ -170,7 +171,7 @@
                 <div class="grid-produtos">
                     <div class="section-title-produtos">Tabela/Gráfico Fixa</div>
                     <div>
-                        <canvas id="chartsFixo"></canvas>
+                        <canvas class="graficos" id="chartsFixo"></canvas>
                     </div>
                     <div class="section-title-produtos"></div>
                     <div class="input-group-produtos">
@@ -257,7 +258,7 @@
                         </tbody>
                     </table>
                     <!-- Repita a estrutura para os outros campos conforme necessário -->
-
+                    <br>
                     <div class="section-title-produtos"></div>
                     <!-- div caso necessite adicionar mais alguma informação -->
                     <!-- Campos para custos de transação -->
@@ -265,7 +266,7 @@
                 <div class="grid-produtos">
                     <div class="section-title-produtos">Tabela/Gráfico Variável</div>
                     <div>
-                        <canvas id="chartsVariavel"></canvas>
+                        <canvas class="graficos" id="chartsVariavel"></canvas>
                     </div>
                     <div class="section-title-produtos"></div>
                     <div class="input-group-produtos">
@@ -349,7 +350,7 @@
                             </tr>
                         </tbody>
                     </table>
-
+                    <br>
                     <div class="section-title-produtos"></div>
                     <!-- div caso necessite adicionar mais alguma informação -->
                     <!-- Campos para custos de transação -->
