Testes do Survey

--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -29,7 +29,7 @@
             <ul class="nav-list">
                 <li><a href="../index.html">Início</a></li>
                 <li><a href="../calculadora/calculadora.html">Calculadora</a></li>
-                <!-- <li><a href="https://www.transformaempresas.com.br">Nossa página</a></li> -->
+                <li><a href="../survey/survey.html">Survey</a></li><!-- <li><a href="https://www.transformaempresas.com.br">Nossa página</a></li> -->
             </ul>
         </nav>
     </header>
