--- a/survey/survey.html
+++ b/survey/survey.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Transforma</title>
     <link rel="stylesheet" href="../calculadora/css/home.css">
+    <link rel="stylesheet" href="survey.css">
     <script src="https://kit.fontawesome.com/b97523014d.js" crossorigin="anonymous"></script>
     <!-- script do survey -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link href="https://unpkg.com/survey-jquery/defaultV2.min.css" type="text/css" rel="stylesheet">
-    <script type="text/javascript" src="https://unpkg.com/survey-jquery/survey.jquery.min.js"></script>
+    <script src="https://unpkg.com/jquery/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/survey-jquery@1.9.132/survey.jquery.min.js"></script>
+    <script src="https://unpkg.com/survey-jquery@1.9.132/themes/index.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/survey-jquery@1.9.132/defaultV2.min.css" />
     <!-- ... -->
 </head>
 
@@ -57,7 +59,7 @@
                 <p><i class="fa-solid fa-house"></i> / Perguntas do Survey</p>
             </div>
             <div>
-                <div id="surveyContainer"></div>
+                <div id="surveyElement"></div>
             </div>
             <!--<div class="box-info">
                 <div style="background: linear-gradient(45deg, #FF5370, #fc8a9d);" class="box-info-single">
