--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="logo">
                 <img src="https://cdn.discordapp.com/attachments/1199788509926526996/1205555133916905572/LOGO_TRANSFORMA_EMPRESAS_br_fd_transp---.png?ex=65d8cbb6&is=65c656b6&hm=9ca55cab0efbe74febf785749d74cc45916f5fc12f1db3a676b8b9e0236c653c&"
                     alt="">
-                <h3>Transforma Empresas 2</h3> 
+                <h3>Transforma Empre    sas</h3> 
             </div>
         </div>
         <nav>
