ajuste para hospedagem

--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -15,9 +15,9 @@
     <header>
         <div class="info-header">
             <div class="logo">
-                <img src="https://cdn.discordapp.com/attachments/1199788509926526996/1205555133916905572/LOGO_TRANSFORMA_EMPRESAS_br_fd_transp---.png?ex=65d8cbb6&is=65c656b6&hm=9ca55cab0efbe74febf785749d74cc45916f5fc12f1db3a676b8b9e0236c653c&"
+                <img src="..\imgs\logo.png"
                     alt="">
-                <h3>Transforma Empresas</h3>
+                <h3>Calculadora Precificação</h3>
             </div>
             <div class="icons-header">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -26,8 +26,8 @@
         <div class="info-header" style="align-items: center;">
             <i class="fa-solid fa-envelope"></i>
             <i class="fa-solid fa-bell"></i>
-            <img
-                src="https://cdn.discordapp.com/attachments/1002196091757920266/1205553729319862353/avatar-default.jpg?ex=65d8ca67&is=65c65567&hm=ab7fc03699b2f34b3a3204272c1559dad83310d489b9c52f0d2dc8bb033f6d03&" />
+            <img src="..\imgs\login.png"
+                    alt="">    
         </div>
     </header>
 
@@ -36,9 +36,6 @@
             <h3>Home</h3>
             <a href="../index.html"><i class="fa-solid fa-house"></i> Início</a>
             <a class="sidebar-active" href="#"><i class="fa-solid fa-calculator"></i> Calculadora</a>
-            <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
-            <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
-            <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <br>
             <div class="separator"></div>
         </div><!--sidebar-->
@@ -92,6 +89,17 @@
             <div class="container-produtos">
                 <div class="grid-produtos">
                     <div class="section-title-produtos">Etapa 1 - Custos de Venda</div>
+                    <details>
+                        <summary>Informações e Exemplos</summary>
+                        <p>Preencha os custos.</p>
+                        <ul>
+                          <li>Ex. Custo Aquisição: 100,00</li>
+                          <li>Ex. Custo Variável: 15</li>
+                          <li>Ex. Despesa Fixa: 8000</li>
+                          <li>Ex. Receita Mensal: 25000</li>
+                          <li>Ex. Margem de Lucro: 25</li>
+                        </ul>
+                      </details>
                     <div class="input-group-produtos">
                         <label for="custoAquisicaoInput">Custo de aquisição do produto:</label>
                         <input type="text" id="custoAquisicaoInput" placeholder="R$0,00">
