--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <header>
         <div class="info-header">
             <div class="logo">
-                <img src="https://cdn.discordapp.com/attachments/1199788509926526996/1205555133916905572/LOGO_TRANSFORMA_EMPRESAS_br_fd_transp---.png?ex=65d8cbb6&is=65c656b6&hm=9ca55cab0efbe74febf785749d74cc45916f5fc12f1db3a676b8b9e0236c653c&"
-                    alt="">
-                <h3>Transforma Empresas</h3>
+                <img src=".\imgs\logo.png" alt="">
+                <h3>Calculadora Precificação</h3>
             </div>
             <div class="icons-header">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -25,8 +24,8 @@
         <div class="info-header" style="align-items: center;">
             <i class="fa-solid fa-envelope"></i>
             <i class="fa-solid fa-bell"></i>
-            <img
-                src="https://cdn.discordapp.com/attachments/1002196091757920266/1205553729319862353/avatar-default.jpg?ex=65d8ca67&is=65c65567&hm=ab7fc03699b2f34b3a3204272c1559dad83310d489b9c52f0d2dc8bb033f6d03&" />
+            <img src=".\imgs\login.png"
+                    alt=""> 
         </div>
     </header>
 
@@ -35,94 +34,76 @@
             <h3>Home</h3>
             <a class="sidebar-active" href="#"><i class="fa-solid fa-house"></i> Início</a>
             <a href="calculadora/calculadora.html"><i class="fa-solid fa-calculator"></i> Calculadora</a>
-            <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
-            <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
-            <a href="#"><i class="fa-solid fa-house"></i> Outro</a>
             <br>
             <div class="separator"></div>
-        </div><!--sidebar-->
+        </div>
+        <!-- Sidebar -->
+
         <div class="content">
             <div class="titulo-secao">
                 <h2>Início</h2>
                 <div class="separator"></div>
-                <p><i class="fa-solid fa-house"></i> / Sua empresa será transformada com a nossa plataforma.</p>
+                <p><i class="fa-solid fa-house"></i> / Bem-vindo à sua plataforma de gestão financeira.</p>
             </div>
-            <!--<div class="box-info">
-                <div style="background: linear-gradient(45deg, #FF5370, #fc8a9d);" class="box-info-single">
-                    <div class="info-text">
-                        <h3>Total Sales</h3>
-                        <p>R$ 1.000,00</p>
-                    </div>
-                    <i class="fa-solid fa-money-check-dollar"></i>
-                </div>
-                <div style="background: linear-gradient(90deg, rgba(46,157,214,1) 0%, rgba(46,192,226,1) 50%);"
-                    class="box-info-single">
-                    <div class="info-text">
-                        <h3>Total Sales</h3>
-                        <p>R$ 1.000,00</p>
-                    </div>
-                    <i class="fa-solid fa-money-check-dollar"></i>
-                </div>
-                <div style="background: linear-gradient(90deg, rgba(46,214,88,1) 0%, rgba(46,226,157,1) 50%);"
-                    class="box-info-single">
-                    <div class="info-text">
-                        <h3>Total Sales</h3>
-                        <p>R$ 1.000,00</p>
-                    </div>
-                    <i class="fa-solid fa-money-check-dollar"></i>
-                </div>
-                <div style="background: linear-gradient(90deg, rgba(173,58,180,1) 0%, rgba(190,29,253,1) 50%);"
-                    class="box-info-single">
-                    <div class="info-text">
-                        <h3>Total Sales</h3>
-                        <p>R$ 1.000,00</p>
-                    </div>
-                    <i class="fa-solid fa-money-check-dollar"></i>
-                </div>
-                <div style="background: linear-gradient(90deg, rgba(214,153,46,1) 0%, rgba(226,172,46,1) 50%);"
-                    class="box-info-single">
-                    <div class="info-text">
-                        <h3>Total Sales</h3>
-                        <p>R$ 1.000,00</p>
-                    </div>
-                    <i class="fa-solid fa-money-check-dollar"></i>
-                </div>
-            </div> 
-            <div class="container-produtos">
-                <div class="grid-produtos">
-                    <div class="section-title-produtos">Etapa 1 - Custos de Venda</div>
-                    <div class="input-group-produtos">
-                        <label for="nomeProduto">Custo de aquisição do produto:</label>
-                        <input type="text" id="nomeProduto" placeholder="Sem descrição">
-                    </div>
-                    <div class="input-group-produtos">
-                        <label for="custoUnitario">Custos variáveis do produto:</label>
-                        <input type="number" id="custoUnitario" placeholder="R$0,00">
-                    </div>
-                    <div class="input-group-produtos">
-                        <label for="valorFrete">Despesas fixas mensais:</label>
-                        <input type="number" id="valorFrete" placeholder="R$0,00">
-                    </div>
-                    <div class="input-group-produtos">
-                        <label for="valorFrete">Receita mensal do seu negócio</label>
-                        <input type="number" id="valorFrete" placeholder="R$0,00">
-                    </div>
-                    <div class="input-group-produtos">
-                        <label for="valorFrete">Margem de lucro desejada:</label>
-                        <input type="number" id="valorFrete" placeholder="R$0,00">
-                    </div>-->
 
-                    <!-- Repita a estrutura para os outros campos conforme necessário -->
+            <div class="paragrafos">
+                <h2>Sobre a Aplicação</h2>
+                <p>Esta aplicação foi desenvolvida para ajudar empresários e gestores a calcular os custos de venda de seus produtos de forma precisa e eficiente. Com ela, você pode:</p>
+                <ul>
+                    <li>Inserir custos de aquisição, custos variáveis, despesas fixas e receita mensal.</li>
+                    <li>Calcular a margem de lucro desejada.</li>
+                    <li>Obter o preço de venda ideal para seus produtos.</li>
+                    <li>Visualizar gráficos que mostram a distribuição dos custos e margens.</li>
+                </ul>
+            </div>
 
-                    <!--<div class="section-title-produtos">Etapa 2 - Custos de transação</div>-->
-                    <!-- Campos para custos de transação -->
+            <div class="paragrafos">
+                <h2>Apresentação da Calculadora de Precificação</h2>
+                <p>
+                    A Calculadora de Precificação é uma ferramenta prática e poderosa para auxiliar empresários na definição
+                    de preços ideais. Com base nas informações fornecidas, ela calcula:
+                </p>
+                <ul>
+                    <li><strong>Preço de venda ideal:</strong> Considerando custos fixos, variáveis e margem de lucro.</li>
+                    <li><strong>Ponto de equilíbrio:</strong> O volume mínimo de vendas necessário para cobrir os custos.</li>
+                    <li><strong>Distribuição dos custos:</strong> Detalhamento visual dos componentes que formam o preço.</li>
+                </ul>
+            </div>
 
-                    <!--<button class="btn-calcular-produtos" type="button">CALCULAR</button>
-                </div>
-            </div>-->
+            <div class="paragrafos">
+                <h2>Funcionalidades</h2>
+                <p>A Calculadora oferece as seguintes funcionalidades:</p>
+                <ul>
+                    <li>Entrada de dados financeiros.</li>
+                    <li>Cálculo automático do preço de venda.</li>
+                    <li>Determinação do ponto de equilíbrio real e por unidade.</li>
+                    <li>Gráficos interativos para análise de custos e margens.</li>
+                </ul>
+            </div>
 
-        </div><!--content-->
-    </section><!--main-->
+            <div class="paragrafos">
+                <h2>Como Usar</h2>
+                <p>Para começar a usar a Calculadora de Precificação, siga os passos abaixo:</p>
+                <ol>
+                    <li>Acesse a página de <a href="calculadora/calculadora.html">Calculadora</a>.</li>
+                    <li>Preencha os campos com os dados financeiros do seu negócio.</li>
+                    <li>Clique no botão "CALCULAR" para obter os resultados.</li>
+                    <li>Analise os gráficos e tabelas para tomar decisões estratégicas.</li>
+                </ol>
+            </div>
+
+            <div class="paragrafos">
+                <h2>Benefícios</h2>
+                <ul>
+                    <li><strong>Precisão:</strong> Fórmulas robustas para cálculos confiáveis.</li>
+                    <li><strong>Facilidade:</strong> Interface amigável, ideal para usuários não técnicos.</li>
+                    <li><strong>Insights Visuais:</strong> Gráficos detalhados ajudam a entender os dados financeiros.</li>
+                </ul>
+            </div>
+        </div>
+        <!-- Content -->
+    </section>
+    <!-- Main -->
 </body>
 
 </html>
